// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getAllUrlsFromDocsConfig > octoai > gets all urls from docs config 1`] = `
[
  "octoai.docs.buildwithfern.com",
  "octoai.docs.buildwithfern.com/documentation",
  "octoai.docs.buildwithfern.com/documentation/quickstart",
  "octoai.docs.buildwithfern.com/getting-started/quickstart",
  "octoai.docs.buildwithfern.com/getting-started/pricing-and-billing",
  "octoai.docs.buildwithfern.com/text-gen-solution/rest-api",
  "octoai.docs.buildwithfern.com/text-gen-solution/migration-from-openai",
  "octoai.docs.buildwithfern.com/documentation/quickstart/media-gen-rest-ap-is",
  "octoai.docs.buildwithfern.com/media-gen-solution/rest-apis/image-gen-api",
  "octoai.docs.buildwithfern.com/media-gen-solution/rest-apis/video-gen",
  "octoai.docs.buildwithfern.com/media-gen-solution/rest-apis/background-removal",
  "octoai.docs.buildwithfern.com/media-gen-solution/rest-apis/upscaling",
  "octoai.docs.buildwithfern.com/media-gen-solution/rest-apis/adetailer",
  "octoai.docs.buildwithfern.com/getting-started/inference-models",
  "octoai.docs.buildwithfern.com/getting-started/how-to-create-an-octoai-access-token",
  "octoai.docs.buildwithfern.com/documentation/text-gen-solution",
  "octoai.docs.buildwithfern.com/text-gen-solution/getting-started",
  "octoai.docs.buildwithfern.com/text-gen-solution/python-sdk",
  "octoai.docs.buildwithfern.com/text-gen-solution/typescript-sdk",
  "octoai.docs.buildwithfern.com/text-gen-solution/json-mode",
  "octoai.docs.buildwithfern.com/text-gen-solution/llama-guard",
  "octoai.docs.buildwithfern.com/text-gen-solution/using-unstructured-io-for-embedding-documents",
  "octoai.docs.buildwithfern.com/documentation/media-gen-solution",
  "octoai.docs.buildwithfern.com/media-gen-solution/getting-started",
  "octoai.docs.buildwithfern.com/documentation/media-gen-solution/customizations",
  "octoai.docs.buildwithfern.com/media-gen-solution/customizations/overview",
  "octoai.docs.buildwithfern.com/media-gen-solution/customizations/checkpoints",
  "octoai.docs.buildwithfern.com/media-gen-solution/customizations/loras",
  "octoai.docs.buildwithfern.com/media-gen-solution/customizations/textual-inversions",
  "octoai.docs.buildwithfern.com/media-gen-solution/customizations/prompt-weighting",
  "octoai.docs.buildwithfern.com/media-gen-solution/customizations/controlnets",
  "octoai.docs.buildwithfern.com/documentation/media-gen-solution/optimizations",
  "octoai.docs.buildwithfern.com/media-gen-solution/optimizations/sdxl-lighting",
  "octoai.docs.buildwithfern.com/media-gen-solution/optimizations/ssd",
  "octoai.docs.buildwithfern.com/media-gen-solution/optimizations/samplers",
  "octoai.docs.buildwithfern.com/python-sdk/image-generator-client",
  "octoai.docs.buildwithfern.com/documentation/media-gen-solution/fine-tuning-stable-diffusion",
  "octoai.docs.buildwithfern.com/media-gen-solution/fine-tuning-stable-diffusion/fine-tuning-stable-diffusion",
  "octoai.docs.buildwithfern.com/media-gen-solution/fine-tuning-stable-diffusion/typescript-sdk-finetuning",
  "octoai.docs.buildwithfern.com/documentation/media-gen-solution/managing-custom-assets-with-asset-library",
  "octoai.docs.buildwithfern.com/media-gen-solution/uploading-a-custom-asset-to-the-octoai-asset-library",
  "octoai.docs.buildwithfern.com/python-sdk/asset-orchestrator-client",
  "octoai.docs.buildwithfern.com/typescript-sdk/asset-library",
  "octoai.docs.buildwithfern.com/documentation/media-gen-solution/supported-image-utilities",
  "octoai.docs.buildwithfern.com/media-gen-solution/image-utilities/inpainting",
  "octoai.docs.buildwithfern.com/media-gen-solution/image-utilities/outpainting",
  "octoai.docs.buildwithfern.com/media-gen-solution/image-utilities/adetailer",
  "octoai.docs.buildwithfern.com/media-gen-solution/image-utilities/photo-merge",
  "octoai.docs.buildwithfern.com/media-gen-solution/image-utilities/upscaling",
  "octoai.docs.buildwithfern.com/media-gen-solution/image-utilities/bg-removal",
  "octoai.docs.buildwithfern.com/documentation/private-deployment",
  "octoai.docs.buildwithfern.com/private-deployment/octostack",
  "octoai.docs.buildwithfern.com/private-deployment/secure-link",
  "octoai.docs.buildwithfern.com/documentation/compute-service",
  "octoai.docs.buildwithfern.com/compute-service/compute-getting-started",
  "octoai.docs.buildwithfern.com/documentation/compute-service/create-an-endpoint-from-an-existing-container",
  "octoai.docs.buildwithfern.com/compute-service/create-endpoint-from-existing-container/create-custom-endpoints-from-a-container",
  "octoai.docs.buildwithfern.com/compute-service/create-endpoint-from-existing-container/pulling-containers-from-a-private-registry",
  "octoai.docs.buildwithfern.com/compute-service/create-endpoint-from-existing-container/setting-account-wide-secrets-for-custom-endpoints",
  "octoai.docs.buildwithfern.com/compute-service/create-custom-endpoint-using-the-cli",
  "octoai.docs.buildwithfern.com/compute-service/advanced-build-a-container-from-scratch-in-python",
  "octoai.docs.buildwithfern.com/compute-service/health-check-path-in-custom-containers",
  "octoai.docs.buildwithfern.com/documentation/cli",
  "octoai.docs.buildwithfern.com/cli/cli-and-sdk-installation",
  "octoai.docs.buildwithfern.com/cli/cli-reference-guide",
  "octoai.docs.buildwithfern.com/documentation/python-sdk",
  "octoai.docs.buildwithfern.com/python-sdk/installation-and-setup",
  "octoai.docs.buildwithfern.com/python-sdk/python-sdk-inferences",
  "octoai.docs.buildwithfern.com/python-sdk/upgrading-from-old-sdk",
  "octoai.docs.buildwithfern.com/documentation/type-script-sdk",
  "octoai.docs.buildwithfern.com/typescript-sdk/installation-and-setup",
  "octoai.docs.buildwithfern.com/typescript-sdk/upgrading-from-old-sdk",
  "octoai.docs.buildwithfern.com/documentation/fa-qs",
  "octoai.docs.buildwithfern.com/faqs/rate-limits",
  "octoai.docs.buildwithfern.com/faqs/privacy-and-security",
  "octoai.docs.buildwithfern.com/faqs/rag",
  "octoai.docs.buildwithfern.com/faqs/service-regions",
  "octoai.docs.buildwithfern.com/faqs/multi-user-accounts",
  "octoai.docs.buildwithfern.com/faqs/open-source-licenses",
  "octoai.docs.buildwithfern.com/api-reference",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/authentication",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/inference",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/octo-ai-api",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/account",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/account/get-account",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/account/patch-account",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/endpoint",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/endpoint/create-endpoint",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/endpoint/get-endpoint",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/endpoint/delete-endpoint",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/endpoint/patch-endpoint",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/endpoint/get-endpoints",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/endpoint/get-container-metadata",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/endpoint/get-endpoint-volume-token",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/telemetry",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/telemetry/get-endpoint-logs",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/telemetry/get-endpoint-logs-stream",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/telemetry/get-endpoint-events",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/telemetry/get-endpoint-events-stream",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/secret",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/secret/create-secret",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/secret/get-secret",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/secret/update-secret",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/secret/delete-secret",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/secret/get-secrets",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/registry-credential",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/registry-credential/create-registry-credential",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/registry-credential/get-registry-credential",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/registry-credential/update-registry-credential",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/registry-credential/delete-registry-credential",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/registry-credential/get-registry-credentials",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/public-endpoint",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/public-endpoint/get-public-endpoints",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/instance-types",
  "octoai.docs.buildwithfern.com/api-reference/octoai-api/instance-types/get-instance-types",
  "octoai.docs.buildwithfern.com/api-reference/octo-ai-api",
  "octoai.docs.buildwithfern.com/api-reference/asset-library",
  "octoai.docs.buildwithfern.com/api-reference/asset-library/list",
  "octoai.docs.buildwithfern.com/api-reference/asset-library/create",
  "octoai.docs.buildwithfern.com/api-reference/asset-library/delete",
  "octoai.docs.buildwithfern.com/api-reference/asset-library/complete-upload",
  "octoai.docs.buildwithfern.com/api-reference/asset-library/get",
  "octoai.docs.buildwithfern.com/api-reference/fine-tuning",
  "octoai.docs.buildwithfern.com/api-reference/fine-tuning/create",
  "octoai.docs.buildwithfern.com/api-reference/fine-tuning/get",
  "octoai.docs.buildwithfern.com/api-reference/fine-tuning/delete",
  "octoai.docs.buildwithfern.com/api-reference/fine-tuning/cancel",
  "octoai.docs.buildwithfern.com/api-reference/fine-tuning/list",
  "octoai.docs.buildwithfern.com/api-reference/image-gen",
  "octoai.docs.buildwithfern.com/api-reference/image-gen/generate-ssd",
  "octoai.docs.buildwithfern.com/api-reference/image-gen/generate-controlnet-sdxl",
  "octoai.docs.buildwithfern.com/api-reference/image-gen/generate-controlnet-sd-15",
  "octoai.docs.buildwithfern.com/api-reference/image-gen/generate-sdxl",
  "octoai.docs.buildwithfern.com/api-reference/image-gen/generate-sd",
  "octoai.docs.buildwithfern.com/api-reference/image-gen/generate-svd",
  "octoai.docs.buildwithfern.com/api-reference/text-gen",
  "octoai.docs.buildwithfern.com/api-reference/text-gen/create-chat-completion",
  "octoai.docs.buildwithfern.com/api-reference/text-gen/create-chat-completion-stream",
  "octoai.docs.buildwithfern.com/api-reference/text-gen/create-completion",
  "octoai.docs.buildwithfern.com/api-reference/text-gen/create-completion-stream",
  "octoai.docs.buildwithfern.com/integrations",
  "octoai.docs.buildwithfern.com/integrations/integrations",
  "octoai.docs.buildwithfern.com/integrations/overview",
  "octoai.docs.buildwithfern.com/integrations/langchain",
  "octoai.docs.buildwithfern.com/integrations/pinecone",
  "octoai.docs.buildwithfern.com/integrations/unstructured",
  "octoai.docs.buildwithfern.com/integrations/openrouter",
  "octoai.docs.buildwithfern.com/integrations/llamaindex",
  "octoai.docs.buildwithfern.com/release-notes",
  "octoai.docs.buildwithfern.com/release-notes/2024",
  "octoai.docs.buildwithfern.com/release-notes/2024/march",
  "octoai.docs.buildwithfern.com/release-notes/2024/february",
  "octoai.docs.buildwithfern.com/release-notes/2024/january",
  "octoai.docs.buildwithfern.com/release-notes/2023",
  "octoai.docs.buildwithfern.com/release-notes/2023/december",
  "octoai.docs.buildwithfern.com/release-notes/2023/november",
  "octoai.docs.buildwithfern.com/release-notes/2023/october",
  "octoai.docs.buildwithfern.com/release-notes/2023/september",
  "octoai.docs.buildwithfern.com/release-notes/2023/august",
  "octoai.docs.buildwithfern.com/release-notes/2023/july",
  "octoai.docs.buildwithfern.com/release-notes/2023/june",
  "octoai.docs.buildwithfern.com/release-notes/2023/may",
]
`;

exports[`getNavigationRoot > octoai > gets navigation root for /api-reference/asset-library/list 1`] = `
{
  "found": {
    "currentNode": {
      "api": "3c6dda5e-7cbd-4a62-a038-090146c4d501",
      "apiType": "endpoint",
      "description": undefined,
      "hidden": false,
      "icon": undefined,
      "id": "list",
      "method": "GET",
      "slug": [
        "api-reference",
        "asset-library",
        "list",
      ],
      "stream": undefined,
      "title": "List Assets",
      "type": "page",
    },
    "currentTabIndex": 1,
    "currentVersionIndex": -1,
  },
  "type": "found",
}
`;

exports[`getNavigationRoot > octoai > gets navigation root for /api-reference/octoai-api/account/get-account 1`] = `
{
  "found": {
    "currentNode": {
      "api": "415f956c-8d5a-4da9-8c57-bcbdf380d82e",
      "apiType": "endpoint",
      "description": "Return fields on an account",
      "hidden": false,
      "icon": undefined,
      "id": "getAccount",
      "method": "GET",
      "slug": [
        "api-reference",
        "octoai-api",
        "account",
        "get-account",
      ],
      "stream": undefined,
      "title": "Get fields on an account",
      "type": "page",
    },
    "currentTabIndex": 1,
    "currentVersionIndex": -1,
  },
  "type": "found",
}
`;

exports[`getNavigationRoot > octoai > gets navigation root for /api-reference/octoai-api/authentication 1`] = `
{
  "found": {
    "currentNode": {
      "description": undefined,
      "fullSlug": [
        "api-reference",
        "octoai-api",
        "authentication",
      ],
      "hidden": false,
      "icon": undefined,
      "id": "docs/api-reference/octoai-api/authentication.mdx",
      "slug": [
        "api-reference",
        "octoai-api",
        "authentication",
      ],
      "title": "Authentication",
      "type": "page",
      "urlSlug": "authentication",
    },
    "currentTabIndex": 1,
    "currentVersionIndex": -1,
  },
  "type": "found",
}
`;

exports[`getNavigationRoot > octoai > gets navigation root for /getting-started 1`] = `undefined`;

exports[`getNavigationRoot > octoai > gets navigation root for /getting-started/quickstart 1`] = `
{
  "found": {
    "currentNode": {
      "description": undefined,
      "fullSlug": [
        "getting-started",
        "quickstart",
      ],
      "hidden": false,
      "icon": undefined,
      "id": "docs/getting-started/quickstart.mdx",
      "slug": [
        "getting-started",
        "quickstart",
      ],
      "title": "Quickstart",
      "type": "page",
      "urlSlug": "quickstart",
    },
    "currentTabIndex": 0,
    "currentVersionIndex": -1,
  },
  "type": "found",
}
`;
